<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/card_user_avatar_img_pz"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:adjustViewBounds="false"
            android:padding="3dp" />

        <ImageView
            android:id="@+id/card_user_gender_icon_pz"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@+id/card_user_name_pz"
            android:adjustViewBounds="false"
            android:padding="1dp" />

        <ImageView
            android:id="@+id/card_user_level_icon_pz"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@+id/card_user_gender_icon_pz"
            android:adjustViewBounds="false"
            android:padding="1dp" />

        <TextView
            android:id="@+id/card_user_name_pz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@+id/card_user_avatar_img_pz"
            android:text="@string/card_user_name_pz"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_content_pz"
            android:layout_width="226dp"
            android:layout_height="44dp"
            android:layout_below="@+id/card_user_avatar_img_pz"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:text="@string/card_content_pz"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/card_timestamp_pz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/card_share_button_pz"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:layout_toStartOf="@id/card_share_button_pz"
            android:text="@string/card_timestamp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/card_share_button_pz"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_user_avatar_img_pz"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="Share"
            android:textColor="@android:color/holo_purple" />

        <TextView
            android:id="@+id/card_title_pz"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/card_user_name_pz"
            android:layout_alignBottom="@+id/card_user_avatar_img_pz"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="5dp"
            android:text="@string/card_title_pz"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
